Fixed alignment styles

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,7 +13,7 @@ $grey: #eee;
 
 // widget config
 $widget-width: 865px;
-$widget-border-radius: 8px;
+$widget-border-radius: 5px;
 $widget-border: 1px solid #D6E5F2;
 $widget-box-shadow: 3px 0px 2px $grey;
 $widget-header-height: 38px;
