--- a/sass/chaordic-onsite.scss
+++ b/sass/chaordic-onsite.scss
@@ -26,7 +26,7 @@ a {
 	box-shadow: $widget-box-shadow;
 	display: flex;
 	overflow: hidden;
-	padding-bottom: 30px;
+	padding-bottom: 27px;
 	position: relative;
 	width: $widget-width;
 
@@ -77,7 +77,8 @@ a {
 		margin: 5px 10px;
 
 		&.chaordic-product-title  {
-		    margin-bottom: 5px;
+			line-height: 14px;
+		    margin-bottom: 7px;
 			overflow: hidden;
 		    text-overflow: ellipsis;
 		    white-space: normal;
@@ -102,7 +103,7 @@ a {
 		&.chaordic-product-info {
 			color: $product-price-color;
 			font-weight: bolder;
-
+			line-height: 10px;
 			span {
 				font-weight: normal;
 			}
@@ -111,6 +112,11 @@ a {
 }
 
 .chaordic-reference {
+
+	a {
+	    padding: 10px 0;
+	    display: block;
+	}
     
     .chaordic-product {
     	border-right: 1px solid $grey;
@@ -121,6 +127,10 @@ a {
 .chaordic-recommendation {
 
 	width: 100%;
+
+	h3 {
+		padding-left: 14px;
+	}
 
 	ul {
 		list-style: none;
